--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,3 +1,17 @@
+.hide {
+  display: none;
+}
+
+.navigation {
+  margin: 20px, 20px;
+}
+
+#feedback {
+  text-align: center;
+}
+
+
+
 nav ul {
   display:flex;
   justify-content: space-between;
@@ -49,5 +63,4 @@ section li {
 
 #scoreBoard p {
   background-color: white;
-  
 }
