--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -185,5 +185,35 @@ textarea {
 }
 
 section {
-  margin-top: 100px;
+  margin-top: 20px;
+}
+
+@media screen and (max-width: 600px) {
+
+  h1 {
+    font-size: 120%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+
+  section li {
+    flex-wrap: wrap;
+    background-color: #737383;
+    color: white;
+    padding: 10px;
+    margin: 5px 10px 5px 10px;
+    width: 50%;
+  }
+
+  #scoreBoard button {
+    background-color: #e65a41;
+    border: none;
+    color: white;
+    width: 150px;
+    height: 90px;
+    text-align: center;
+    font-size: 100%;
+    margin: 10px;
+    cursor: pointer;
+  }
 }
